--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class="toptitle">
         <p>Xu-Ruilin: Welcome!</p>
         <hr>
+        <p>Pycharm的激活方法很简单: <a href="https://wwvg.lanzouf.com/i5WQt0ktpkyj">Press here!</a></p>
+        <p>(CSS还没加)</p>
     </div>
 </body>
 </html>
