--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <title>Xu-Ruilin: Welcome!</title>
 </head>
 <body>
+    <a href="github.com/Xu-Ruilin">Github</a>
     <div class="toptitle">
         <p>Xu-Ruilin: Welcome!</p>
         <hr>
         <p>Pycharm的激活方法很简单: <a href="https://wwvg.lanzouf.com/i5WQt0ktpkyj">Press here!</a></p>
-        <p>Attention: 解压后文件夹里有个MACOSX的文件夹,应该可以(pycharm community和pycharm professional没什么区别<p>
-        <p>@harrynotfound<p>
         <p>(CSS还没加)</p>
     </div>
 </body>
