--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Xu-Ruilin: Welcome!</title>
 </head>
 <body>
-    <a href="github.com/Xu-Ruilin">Github</a>
+    <a href="https://www.github.com/Xu-Ruilin">Github</a>
     <div class="toptitle">
         <p>Xu-Ruilin: Welcome!</p>
         <hr>
