--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <p>Xu-Ruilin: Welcome!</p>
         <hr>
     </div>
+    <p>@harrynotfound</p>
     <p>Pycharm的激活方法很简单: <a href="https://wwvg.lanzouf.com/i5WQt0ktpkyj">Press here!</a></p>
-    <p>(CSS还没加)</p>
-    
+    <hr>
 </body>
 </html>
