--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Xu-Ruilin: Welcome!</title>
 </head>
 <body>
-    <a href="github.com/Xu-Ruilin">Github</a> <a href="http://291123.xyz">Home</a>
+    <div class="topurl">
+        <a href="http://291123.xyz">Home</a> <a href="https://github.com/Xu-Ruilin">Github</a>
+    </div>
     <div class="toptitle">
         <p>Xu-Ruilin: Welcome!</p>
         <hr>
     </div>
-    <p>@harrynotfound</p>
-    <p>Pycharm的激活方法很简单: <a href="https://wwvg.lanzouf.com/i5WQt0ktpkyj">Press here!</a></p>
-    <hr>
+        <p>Pycharm的激活方法很简单: <a href="https://wwvg.lanzouf.com/i5WQt0ktpkyj">Press here!</a></p>
 </body>
 </html>
