--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="topurl">
         <a href="http://291123.xyz">Home</a> <a href="https://github.com/Xu-Ruilin">Github</a>
-    </div><a href="mm.291123.xyz" class="mmurl" text-align="right">mm</a>
+    </div><a href="mm.291123.xyz" class="mmurl">mm</a>
     <div class="toptitle">
         <p>Xu-Ruilin: Welcome!</p>
         <hr>
