commit father's netdisk url

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 </head>
 <body>
     <div class="topurl">
-        <a href="http://291123.xyz">Home</a> <a href="https://github.com/Xu-Ruilin">Github</a> <a href="http://291123.xyz/faqs">FAQS</a>
+        <a href="http://291123.xyz">Home</a> <a href="https://github.com/Xu-Ruilin">Github</a> <a href="http://291123.xyz/faqs">FAQS</a> <a href="https://0d47-39-189-58-84.ngrok-free.app/">Father's Netdisk</a>
     </div>
     <div class="toptitle">
         <p>Xu-Ruilin: Welcome!</p>
         <hr>
     </div>
-        <p>Pycharm的激活方法很简单: <a href="https://wwvg.lanzouf.com/i5WQt0ktpkyj">Press here!</a></p>
 </body>
 </html>
