--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="topurl">
-        <a href="http://291123.xyz">Home</a> <a href="https://github.com/Xu-Ruilin">Github</a> <a href="http://291123.xyz/faqs">FAQS</a> <a href="https://0d47-39-189-58-84.ngrok-free.app/">Father's Netdisk</a>
+        <a href="http://291123.xyz">Home</a> <a href="https://github.com/Xu-Ruilin">Github</a> <a href="http://291123.xyz/faqs">FAQS</a> <a href="http://291123.xyz/cloud.html">Cloud</a>
     </div>
     <div class="toptitle">
         <p>Xu-Ruilin: Welcome!</p>
