--- a/java/index.html
+++ b/java/index.html
@@ -14,6 +14,10 @@
     <li>
         <ol><a href="http://291123.xyz/java/oopadvanced.html">Java object-oriented programming advanced.</a></ol>
         <ol><a href="http://291123.xyz/java/oopbasic.html">Java object-oriented programming basic.</a></ol>
+        <ol><a href="http://291123.xyz/java/genericdesirn.html">Java generic programming</a></ol>
+        <ol><a href="http://291123.xyz/java/Collection_classes_and_IO.html">Collection classes and IO</a></ol>
+        <ol><a href="http://291123.xyz/java/Multithreading_and_Reflection.html"></a></ol>
+        <ol><a href="http://291123.xyz/java/GUI_program_development.html">GUI program development</a></ol>
     </li>
 </body>
 </html>
