--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="http://291123.xyz/faqs">FAQS</a> 
         <a href="http://291123.xyz/cloud.html">Cloud</a> 
         <a href="http://291123.xyz/java">Java Course</a>
-        <a href="http://291123.xyz/vmess.html"></a>
+        <a href="http://291123.xyz/vmess.html">vmess_config</a>
     </div>
     <div class="toptitle">
         <p>Xu-Ruilin: Welcome!</p>
