--- a/vmess.html
+++ b/vmess.html
@@ -8,11 +8,25 @@
 <body>
     <p>
         address:43.153.111.207
+    </p>
+    <p>
         port:443
+    </p>
+    <p>
         network:ws
+    </p>
+    <p>
         host:proxy.291123.xyz
+    </p>
+    <p>
         path/gFDLh6O
+    </p>
+    <p>
         TLS:tls
     </p>
+    <h3>
+        Detail of config.
+    </h3>
+    <img src="config.png" alt="config_picture">
 </body>
 </html>
