--- a/vmess.html
+++ b/vmess.html
@@ -28,5 +28,8 @@
         Detail of config.
     </h3>
     <img src="config.png" alt="config_picture">
+
+    <p>download the v2ray proxy client: </p>
+    <a href="https://github.com/voidrayrain/xuruilin.github.io/releases/download/vmess-client/proxy-windows.zip">windows_x64  </a> <a href="https://github.com/voidrayrain/xuruilin.github.io/releases/download/vmess-client/proxy-debian.deb">debian_x64</a>
 </body>
 </html>
