--- a/vmess.html
+++ b/vmess.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <h1>vmess link: </h1>
-    <input id="foo" type="text" value="vmess://eyAidiI6IjIiLCAicHMiOiIiLCAiYWRkIjoiNDMuMTU1LjE0NC4yMCIsICJwb3J0IjoiNDQzIiwgImlkIjoiMWZmMGIzOWQtNjVkZC00MzRmLTg0YzktNWE3MDVhNzc0MWIzIiwgImFpZCI6IjAiLCAibmV0Ijoid3MiLCAidHlwZSI6Im5vbmUiLCAiaG9zdCI6InByb3h5LjI5MTEyMy54eXoiLCAicGF0aCI6Ii9VTXRnMjE3c0NMdiIsICJ0bHMiOiJ0bHMiIH0=">
+    <div class="foo">
+        vmess://eyAidiI6IjIiLCAicHMiOiIiLCAiYWRkIjoiNDMuMTU1LjE0NC4yMCIsICJwb3J0IjoiNDQzIiwgImlkIjoiMWZmMGIzOWQtNjVkZC00MzRmLTg0YzktNWE3MDVhNzc0MWIzIiwgImFpZCI6IjAiLCAibmV0Ijoid3MiLCAidHlwZSI6Im5vbmUiLCAiaG9zdCI6InByb3h5LjI5MTEyMy54eXoiLCAicGF0aCI6Ii9VTXRnMjE3c0NMdiIsICJ0bHMiOiJ0bHMiIH0=
+    </div>
     <span class="input-group-button">
-    <button class="btn" type="button" data-clipboard-demo data-clipboard-target="#foo">
+    <button class="btn" type="button" data-clipboard-target="#foo">
     <img class="clippy" src="clippy.svg" width="13" alt="Copy to clipboard">
     </button>
     </span>
