--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
     <title>Xu-Ruilin: Welcome!</title>
 </head>
 <body>
-    <div class="topurl">
-        <a href="http://291123.xyz">Home</a> 
-        <a href="https://github.com/Xu-Ruilin">Github</a> 
-        <a href="http://291123.xyz/faqs">FAQS</a> 
-        <a href="http://291123.xyz/cloud.html">Cloud</a> 
-        <a href="http://291123.xyz/java">Java Course</a>
-        <a href="http://291123.xyz/vmess.html">vmess_config</a>
-    </div>
     <div class="toptitle">
         <p>Xu-Ruilin: Welcome!</p>
         <hr>
+    </div>
+    <div class="topurl">
+        <a href="http://291123.xyz">Home</a>
+        <br> 
+        <a href="https://github.com/Xu-Ruilin">Github</a> 
+        <br>
+        <a href="http://291123.xyz/faqs">FAQS</a> 
+        <br>
+        <a href="http://291123.xyz/cloud.html">Cloud</a> 
+        <br>
+        <a href="http://291123.xyz/java">Java Course</a>
+        <br>
+        <a href="http://291123.xyz/vmess.html">vmess_config</a>
+        <br>
+        <a href="http://291123.xyz/rust-course/html/">rust-course html</a>
+        <br>
+        <a href="http://291123.xyz/rust-course/pdf/">rust-course pdf</a>
     </div>
 </body>
 </html>
