--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <br>
         <a href="http://291123.xyz/rust-course/html/">rust-course html</a>
         <br>
-        <a href="http://291123.xyz/rust-course/pdf/">rust-course pdf</a>
+        <a href="http://291123.xyz/rust-course/pdf/rust-course.pdf">rust-course pdf</a>
     </div>
 </body>
 </html>
